# plutus-contract-complex-validator-application

./: README.md  cabal.project  hie.yaml  project.cabal
app/: PlutusComplex.hs
src/: PlutusComplexValidator.hs
